# atheneum-forge

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  README.md  manifest.toml  pyproject.toml
.github/workflows/: build-and-test.yaml  check-formatting.yaml  release.yaml
atheneum_forge/: __init__.py  copyright.j2  core.py  forge.py  logging_setup.py  main.py  main.tcss  main_cli.py  project_factory.py  update.py
atheneum_forge/data/cpp/: CMakeLists.txt.j2  Taskfile.yml.j2  manifest.toml
atheneum_forge/data/cpp/.github/: clang-tidy-check.yml
atheneum_forge/data/cpp/.github/workflows/: build-and-test.yml  clang-format-check.yml.j2  clang-tidy-check.yml
atheneum_forge/data/cpp/app/: CMakeLists.txt.j2
atheneum_forge/data/cpp/cmake/: build-options-interface.cmake  initialize-submodules.cmake  toolchain.windows.cmake
atheneum_forge/data/cpp/include/atheneum/: atheneum.h
atheneum_forge/data/cpp/src/: CMakeLists.txt
atheneum_forge/data/python/: dodo.py  manifest.toml  pyproject.toml
atheneum_forge/languages/cpp/: .clang-tidy.j2  CMakeLists.txt.j2  CMakePresets.json  main_CMakeLists.txt.j2  manifest.toml
atheneum_forge/languages/cpp/app/: app_CMakeLists.txt.j2
atheneum_forge/languages/cpp/cmake/: build-options-interface.cmake  get-git-hash.cmake  git-versioning.cmake  initialize-submodules.cmake  toolchain-windows.cmake
atheneum_forge/languages/cpp/src/: CMakeLists.txt.j2  src_CMakeLists.txt.j2
atheneum_forge/languages/cpp/test/: test_CMakeLists.txt.j2
atheneum_forge/languages/python/: LICENSE.txt  README.md  manifest.toml  pyproject.toml
atheneum_forge/languages/python/.github/workflows/: build-and-test.yaml
bigladder_boilerplate/: core.py  main.py
boilerplate/: core.py  main.py
data/cpp/: CMakeLists.txt  Dockerfile.format  LICENSE.txt  README.md  Taskfile.yml  manifest.toml
data/cpp/.github/workflows/: clang-format-check.yml
data/cpp/app/: CMakeLists.txt
data/cpp/src/: CMakeLists.txt
data/cpp/test/: CMakeLists.txt
data/python/: manifest.toml  pyproject.toml  uv.lock.gen
data/python/.github/workflows/: check-formatting.yaml
tests/: smoke_test.py  test_atheneum_forge.py  test_boilerplate.py  test_core_error_paths.py  test_forge.py  test_main_cli.py  test_project_factory.py  test_projects.py  test_template.py  test_update_project.py
