[project]
name = "atheneum-forge"
version = "0.1.0"
description = "Project boilerplate and build system scaffolding generation and maintenance."
authors = [{ name = "Big Ladder Software", email = "info@bigladdersoftware.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "jinja2>=3.1.4,<4",
    "typer>=0.12.5,<0.13",
    "tomli-w>=1.1.0,<2",
]

[project.scripts]
forge = "atheneum_forge.main:app"

[dependency-groups]
dev = [
    "ruff>=0.7.0,<0.8",
    "pytest>=8.3.3,<9",
    "python-lsp-server>=1.12.0,<2",
    "black>=24.10.0,<25",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors (see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w)
    "F",  # pyflakes (see https://docs.astral.sh/ruff/rules/#pyflakes-f)
    "PL", # Pylint (see https://docs.astral.sh/ruff/rules/#pylint-pl)
    "I001" # isort unsorted-imports (see https://docs.astral.sh/ruff/rules/#isort-i)
    ]
ignore = [
    "F405", # undefined-local-with-import-star-usage
]
pylint.max-args=6

[tool.mypy]
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "lattice.*"
disable_error_code = ["annotation-unchecked","import"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
