[project]
name = "atheneum-forge"
version = "0.1.0"
description = "Project boilerplate and build system scaffolding generation and maintenance."
authors = [{ name = "Big Ladder Software", email = "info@bigladdersoftware.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "jinja2>=3.1.4,<4",
    "typer>=0.12.5,<0.13",
    "click<8.2.0",
    "tomli-w>=1.1.0,<2",
    "pyyaml>=6.0.0",
    "yamlcore",
    "textual"
]

[project.scripts]
forge = "atheneum_forge.main:main"
forge-cli ="atheneum_forge.main_cli:app"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "python-lsp-server>=1.12.0,<2",
    "pre-commit",
    "mypy",
    "textual-dev"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors (see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w)
    "F",  # pyflakes (see https://docs.astral.sh/ruff/rules/#pyflakes-f)
    "PL", # Pylint (see https://docs.astral.sh/ruff/rules/#pylint-pl)
    "I001" # isort unsorted-imports (see https://docs.astral.sh/ruff/rules/#isort-i)
    ]
ignore = [
    "F405", # undefined-local-with-import-star-usage
]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
exclude = "atheneum_forge/languages/vendor/"

[[tool.mypy.overrides]]
module = "atheneum_forge.*"
disable_error_code = ["annotation-unchecked","import"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = ["atheneum_forge"]
