[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <4"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest >= 7.1.3",
    "doit",
    "pre-commit",
    "pylint",
    "mypy",
    "ruff"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "PL", "I001"]
ignore = ["F405", # undefined-local-with-import-star-usage
]

[tool.mypy]
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "lattice.*"
disable_error_code = ["annotation-unchecked","import"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
