[project]
name = "{{ project_name }}"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "doit",
    "pre-commit",
    "mypy",
    "twine>=6.1.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors (see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w)
    "F",  # pyflakes (see https://docs.astral.sh/ruff/rules/#pyflakes-f)
    "PL", # Pylint (see https://docs.astral.sh/ruff/rules/#pylint-pl)
    "I001" # isort unsorted-imports (see https://docs.astral.sh/ruff/rules/#isort-i)
    ]
ignore = [
    "F405", # undefined-local-with-import-star-usage
]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "{{ project_name }}.*"
disable_error_code = ["annotation-unchecked","import"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["{{ package_name }}"] # see also: 'only-include' https://hatch.pypa.io/1.13/config/build/#explicit-selection

[tool.hatch.build.targets.wheel.force-include]
# "path-to-extra-resource-files" = "path-in-distribution-package"

[tool.uv]
[tool.uv.sources]

